--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,11 @@ verify_ssl = true
 
 [packages]
 django = "*"
+python-decouple = "*"
+gunicorn = "*"
+psycopg2-binary = "*"
+dj-database-url = "*"
+whitenoise = "*"
 
 [requires]
 python_version = "3.7"
