--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ psycopg2-binary = "*"
 dj-database-url = "*"
 whitenoise = "*"
 django-heroku = "*"
+djangorestframework = "*"
 
 [requires]
 python_version = "3.7"
