--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ dj-database-url = "*"
 whitenoise = "*"
 django-heroku = "*"
 djangorestframework = "*"
+django-cors-headers = "*"
 
 [requires]
 python_version = "3.7"
