modified schema and api to show names instead of ids

--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ whitenoise = "*"
 django-heroku = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
+django-seed = "*"
 
 [requires]
 python_version = "3.7"
