Implemented social django for token based auth from fe

--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,8 @@ django-heroku = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
 django-seed = "*"
+social-auth-app-django = "*"
+social-auth-core = "*"
 
 [requires]
 python_version = "3.7"
