--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,28 @@
+certifi==2019.3.9
+chardet==3.0.4
+defusedxml==0.6.0
 dj-database-url==0.5.0
-Django==2.2.1
+Django==2.2.2
+django-cors-headers==3.0.2
+django-heroku==0.3.1
+django-seed==0.1.9
+djangorestframework==3.9.4
+Faker==1.0.7
 gunicorn==19.9.0
+idna==2.8
+oauthlib==3.0.1
 psycopg2-binary==2.8.2
+PyJWT==1.7.1
+python-dateutil==2.8.0
 python-decouple==3.1
+python3-openid==3.1.0
 pytz==2019.1
+requests==2.22.0
+requests-oauthlib==1.2.0
+six==1.12.0
+social-auth-app-django==3.1.0
+social-auth-core==3.2.0
 sqlparse==0.3.0
+text-unidecode==1.2
+urllib3==1.25.3
 whitenoise==4.1.2
