server now supports edit entry through DRF

--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,7 @@ social-auth-app-django = "*"
 social-auth-core = "*"
 cryptography = "*"
 requests = "*"
+psycopg2 = "*"
 
 [requires]
 python_version = "3.7"
